[package]
name = "cargo-docserve"
version = "0.1.0"
authors = ["Chris Kuehl <ckuehl@ocf.berkeley.edu>"]
description = "Cargo subcommand for serving docs with an embedded webserver"
website = "https://github.com/chriskuehl/cargo-docserve"
license = "MIT"

[[bin]]
name = "cargo-docserve"
doc = false

[dependencies]
clap = "2.26"
iron = "0.5"
staticfile = "0.4"
